kubernetes-manifests/guestbook-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-guestbook-frontend
  labels:
    app: python-guestbook
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: python-guestbook
        tier: frontend
    spec:
      serviceAccountName: sql-proxy-sa
      containers:
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.6.0
        args:
          - "--private-ip"
          - "--structured-logs"
          - "--port=5432"
          - "$(CONNECTION)"
        securityContext:
          runAsNonRoot: true
      - name: guestbook-django-app
        image: guestbook-django-app
        ports:
        - name: http-server
          containerPort: 8080
