kubernetes-manifests/guestbook-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-guestbook-frontend
  namespace: demo
  labels:
    app: python-guestbook
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: python-guestbook
    tier: frontend
